# synm

./: .env.example  .gitignore  .mcp.json.example  Caddyfile  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.portainer.yml  docker-compose.yml  personal_ai_vault_blueprint.md  pyproject.toml  requirements.txt
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
mediator/: Dockerfile  pyproject.toml  requirements.txt
mediator/app/: __init__.py  main.py
mediator/app/audit/: __init__.py  logger.py
mediator/app/auth/: __init__.py  pat.py
mediator/app/policies/: __init__.py  engine.py  example.yaml
mediator/app/redact/: __init__.py  pii.py
mediator/app/store/: __init__.py  sql.py  vector.py
mediator/tests/: __init__.py  test_main.py  test_policies.py  test_redaction.py
notes/: bio.md  projects.md
scripts/: seed.py
src/sanctum/: __init__.py  config.py  main.py
src/sanctum/api/: __init__.py  auth.py  health.py
